# android_ndk

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/mapscloud/jni/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/mapscloud/ndk/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: modelTextured.fsh  modelTextured.vsh
app/src/main/java/com/mapscloud/jni/: MainActivity.kt  NDKMate.java  NativePort.java  RequestNative.kt
app/src/main/java/com/mapscloud/ndk/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/mapscloud/jni/: ExampleUnitTest.kt
app/src/test/java/com/mapscloud/ndk/: ExampleUnitTest.kt
distribution/assimp/include/assimp/: Importer.hpp  config.h  defs.h
distribution/glm/: Test.cpp  Test2.cpp  Test2.h
distribution/gml/: Test.h
gradle/wrapper/: gradle-wrapper.properties
libnativemate/: build.gradle
libnativemate/libs/: libGestures.aar
libnativemate/src/androidTest/java/com/mapscloud/libnativemate/: ExampleInstrumentedTest.java
libnativemate/src/main/: AndroidManifest.xml
libnativemate/src/main/cpp/assimp/: CMakeLists.txt  GestureAction.cpp  GestureAction.h  JNIImpl.cpp  JNIImpl.h  ModelLoader.cpp  ModelLoader.h
libnativemate/src/main/cpp/assimp/common/: misc.cpp  misc.h
libnativemate/src/main/cpp/assimp/core/: AssimpMate.cpp  AssimpMate.h  GLMMate.cpp  GLMMate.h
libnativemate/src/main/cpp/assimp/gles/: GLESMate.cpp  GLESMate.h  MeshInfo.cpp  MeshInfo.h  ShaderMate.cpp  ShaderMate.h
libnativemate/src/main/cpp/assimp/utils/: AssetHelper.cpp  AssetHelper.h
libnativemate/src/main/cpp/basic/: CMakeLists.txt  NativeMate.cpp  NativePort.cpp  NativePort.h  NativeUtils.cpp  com_mapscloud_libnativemate_basic_NativeMate.h  com_mapscloud_libnativemate_basic_NativePort.h
libnativemate/src/main/cpp/utils/: LogUtil.h
libnativemate/src/main/java/com/mapscloud/libnativemate/: NativeConnector.java  NativeMate.java  NativePort.java  NativeUtils.java
libnativemate/src/main/jni/: CMakeLists.txt  NativeMate.cpp  NativeMate.h  NativePort.cpp  NativeUtils.cpp  com_mapscloud_libnativemate_NativeMate.h  com_mapscloud_libnativemate_NativePort.h
libnativemate/src/main/res/values/: strings.xml
libnativemate/src/test/java/com/mapscloud/libnativemate/: ExampleUnitTest.java
libprebuild/: build.gradle
libprebuild/src/androidTest/java/com/trans/libprebuild/: ExampleInstrumentedTest.kt
libprebuild/src/main/cpp/: CMakeLists.txt
libprebuild/src/main/cpp/assimp/: CMakeLists.txt
prebuild-lib/: build.gradle
prebuild-lib/src/main/cpp/: CMakeLists.txt
(+20 files in other folders)
